removed auto re-indexing of BMSes and double click to edit BMS and also split up scripts to be run separately with start.sh and startWebserver.sh